# minimal-viable-prover

./: .gitignore  Cargo.toml  README.md
src/: main.rs  setup.rs  utils.rs
