[package]
name = "minimal-viable-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = "0.8.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
ff = "0.13.0"
lambdaworks-crypto = "0.2.0"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0.96"
